--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     }
 
     // --- CONFIG: your Apps Script URL + language + diagram id ---
-    const SHEET_API_URL = 'YOUR_SHEET_WEB_APP_URL_HERE'; // <-- paste your URL
+    const SHEET_API_URL = 'https://script.google.com/a/macros/macmillan.com/s/AKfycbx9Q497bGL6gSw4LWa2EoQ4GtDNfEnCwVsJvyxQggI2VAFQPU0FBR4LOFpfF4pm2mEE/exec'; // <-- paste your URL
     const LANG = 'en';
     const DIAGRAM_ID = 'heart';
 
